

2007.Sep.07 (svn.debian.org/tux4kids - revision 231)
  Version 1.5.4

  Build:
    * Renamed configure.in to configure.ac as is now preferred.
    * Removed autogen.sh as autoreconf is preferred.
  Game:
    * Added lesson for "Subtraction 0-20"
      (data/missions/lessons/lesson08.1)
    * Added hackery to load_default_font() to get it to load
      "/usr/share/fonts/truetype/ttf-sil-andika/AndikaDesRevG.ttf"
      (Debian font location) if font not found under data path.
    * Fixed minor problem with screen redrawing for "Custom Game".
    * Setup now tries to write user config file (using default
      settings) if user config file not found, e.g.  when the
      game is run for the first time by that user.

      David Bruce <dbruce@tampabay.rr.com>


2007.Aug.27 (svn.debian.org/tux4kids - revision 215)

  Code:
    * Changed arrays in game.c to dynamic allocation, fixed a
      crashing bug related to array bounds violation.
  Game:
    * Fix of "Custom Game" option to enable play based on user's
      options file, also added on-screen explanatory text.

      Tim Holy <holy@wustl.edu>


2007.Aug.23 (svn.debian.org/tux4kids - revision 212)
  Version 1.5.3

  Build:
    * Fixes in images/Makefile.am and image/tux/Makefile.am - some
      files had been left off EXTRA_DIST list leading to incomplete
      installation with 1.5.2 tar.gz.

      David Bruce <dbruce@tampabay.rr.com>

2007.Aug.21 (svn.debian.org/tux4kids - revision 211)
  Version 1.5.2

  Build:
    * Doc updates
    * Fixes in top-level Makefile.am - "make distcheck" now
      succeeds without errors, "make uninstall" removes data and *.mo
      files properly.

      David Bruce <dbruce@tampabay.rr.com>


2007.Aug.21 (svn.debian.org/tux4kids - revision 207)
  Game:
    * Fix audio system: clean up properly on exit, more robust handling
      of the availability of audio hardware, respect --nosound command line
      parameter setting.
    * Got demo mode working again
  Options: