@@ -36,7 +36,7 @@ subdir = data/images/sprites
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/acinclude.m4 \
-	$(top_srcdir)/configure.in
+	$(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
@@ -77,19 +77,19 @@ LTLIBOBJS =  ${LIBOBJDIR}strtod$U.lo
 MAINT = #
 MAKEINFO = ${SHELL} /home/dbruce/tux4kids/tuxmath/trunk/missing --run makeinfo
 MKDIR_P = /bin/mkdir -p
-NAME_VERSION = tuxmath-1.5.2
+NAME_VERSION = tuxmath-1.5.4
 NSIS = /usr/bin/makensis
 NSI_DLL_DIR = /home/dbruce/tuxmath_dll
 NSI_INSTALL_DIR = mingw32
 NSI_TUXMATH_CONF_DIR = no
 OBJEXT = o
 PACKAGE = tuxmath
-PACKAGE_BUGREPORT = 
+PACKAGE_BUGREPORT = tuxmath-devel@lists.sourceforge.net
 PACKAGE_DATA_DIR = data
-PACKAGE_NAME = 
-PACKAGE_STRING = 
-PACKAGE_TARNAME = 
-PACKAGE_VERSION = 
+PACKAGE_NAME = tuxmath
+PACKAGE_STRING = tuxmath 1.5.4
+PACKAGE_TARNAME = tuxmath
+PACKAGE_VERSION = 1.5.4
 PATH_SEPARATOR = :
 POW_LIB = 
 SDL_CFLAGS = -I/usr/include/SDL -D_GNU_SOURCE=1 -D_REENTRANT
@@ -98,7 +98,7 @@ SDL_LIBS = -L/usr/lib -lSDL
 SET_MAKE = 
 SHELL = /bin/sh
 STRIP = i586-mingw32msvc-strip
-VERSION = 1.5.2
+VERSION = 1.5.4
 WINDRES = /usr/bin/i586-mingw32msvc-windres
 abs_builddir = /home/dbruce/tux4kids/tuxmath/trunk/data/images/sprites
 abs_srcdir = /home/dbruce/tux4kids/tuxmath/trunk/data/images/sprites
@@ -119,7 +119,7 @@ build_vendor = pc
 builddir = .
 datadir = ${datarootdir}
 datarootdir = ${prefix}/share
-docdir = ${datarootdir}/doc/${PACKAGE}
+docdir = ${datarootdir}/doc/${PACKAGE_TARNAME}
 dvidir = ${docdir}
 exec_prefix = ${prefix}
 host = i586-pc-mingw32msvc
